Updated by mdAutofix.py

--- a/c-legacy-releases/2020/01162020.md
+++ b/c-legacy-releases/2020/01162020.md
@@ -132,7 +132,7 @@ Adobe Analytics 的新功能和修正項目：
 | Analysis Workspace – 自由表格產生器 | 啟用「表格產生器」後，許多維度、劃分、量度和區段都可直接拖放使用，方便建立可回答更複雜商業問題的表格。資料不會立即更新，而是在您確定要建立哪種資料表並選取&#x200B;**[!UICONTROL 組建]**&#x200B;後，資料才會更新，為您節省寶貴時間。 此外，這項功能也提供以下輔助功能：<ul><li>**預覽**：演算實際資料前，您可以先預覽表格格式。</li><li>**彈性的表格列與劃分設定**：您可以針對每個維度列設定列與劃分層級。以前，Workspace 的預設內容只有在資料回傳後才能變更。</li><li>**依位置劃分**：您可以設定維度列，一律&#x200B;_依位置劃分_&#x200B;而非&#x200B;_依特定項目_&#x200B;劃分 (預設)。</li><li>**手動靜態列排序**：您可以手動排序靜態列，讓表格列能依您的需求顯示。以前，靜態列只能依量度欄或字母順序排序。</li></ul>這項功能於 1 月推出後，相關文件也將隨之發佈。 |
 | 跨裝置分析 (CDA) 新增[!UICONTROL 識別狀態]維度 | 我們為 CDA 虛擬報表套裝新增[!UICONTROL 識別狀態]維度。此維度有兩個可能的值，分別是&#x200B;_已識別_&#x200B;和&#x200B;_未識別_。_已識別_：表示人員已由裝置圖表識別。_未識別_：表示裝置圖表未識別該人員。換句話說，<br>CDA 使用者現在可以建立經過計算的量度，例如[!UICONTROL 裝置圖表涵蓋範圍]，該量度可顯示虛擬報表套裝中有多少人已由裝置圖表識別。此度量有助於疑難排解 CDA 壓縮率的相關問題。如果識別的人數不多，結合度就會偏低。 |
 | 資料倉儲 API 中的 VRS 支援 | 現在，使用者可透過資料倉儲 API 使用虛擬報表套裝。相較之下，以前使用者只能透過資料倉儲 UI 使用此功能。現在使用資料倉儲 API 時，您可以查看及查詢虛擬報表套裝，但套用至虛擬報表套裝的區段必須與資料倉儲相容。 |
-| 隱私權服務 API：CCPA | 加州消費者隱私權法案 (California Consumer Privacy Act, CCPA) 強化了美國加州居民的隱私權和消費者保護力道。本法案自 2020 年 1 月 1 日起生效。<br><br/>CCPA 為加州居民提供了新的資料隱私權，例如有權存取和刪除其個人資料、有權得知其個人資料是否遭到販售或揭露 (以及對象是誰)，以及有權拒絕廠商販售其個人資料。<br><br/>隱私權服務可支援使用者提出拒絕銷售個人資料的要求。<br><br/>隱私權服務原本稱為 GDPR 服務，不僅保留之前的所有功能，現在更擴大範圍支援 CCPA。<br/><br/>[Analytics 中的 CCPA ](https://experienceleague.adobe.com/docs/analytics/admin/data-governance/an-ccpa-overview.html?lang=zh-Hant)<br><br/>[隱私權服務概觀](https://experienceleague.adobe.com/docs/experience-platform/privacy/home.html?lang=zh-Hant) |
+| 隱私權服務 API：CCPA | 加州消費者隱私權法案 (California Consumer Privacy Act, CCPA) 強化了美國加州居民的隱私權和消費者保護力道。本法案自 2020 年 1 月 1 日起生效。<br><br/>CCPA 為加州居民提供了新的資料隱私權，例如有權存取和刪除其個人資料、有權得知其個人資料是否遭到販售或揭露 (以及對象是誰)，以及有權拒絕廠商販售其個人資料。<br><br/>隱私權服務可支援使用者提出拒絕銷售個人資料的要求。<br><br/>隱私權服務原本稱為 GDPR 服務，不僅保留之前的所有功能，現在更擴大範圍支援 CCPA。<br/><br/>[Analytics 中的 CCPA &#x200B;](https://experienceleague.adobe.com/docs/analytics/admin/data-governance/an-ccpa-overview.html?lang=zh-Hant)<br><br/>[隱私權服務概觀](https://experienceleague.adobe.com/docs/experience-platform/privacy/home.html?lang=zh-Hant) |
 
 #### 修正
 
