--- a/c-legacy-releases/2020/10082020.md
+++ b/c-legacy-releases/2020/10082020.md
@@ -210,7 +210,7 @@ Audience Manager 的新功能、修正項目、說明文件和教學課程。
 * 修正 Audience Manager REST API 的下列問題：在篩選要求中的特性時，特性端點不會傳回跨裝置量度。(AAM-55878)
 * 修正「人物導向目的地」中的下列問題：Facebook 整合存取權杖到期提醒電子郵件未傳送給正確的收件者。(AAM-56215)
 * 修正 Google 目的地的下列問題：將區段對應至其 Google 目的地時，客戶會收到 `RateExceededError: Rate_Exceeded` 錯誤。(AAM-55998)
-* 修正在資料提供者未指派[組織 ID ](https://experienceleague.adobe.com/docs/core-services/interface/manage-users-and-products/organizations.html?lang=zh-Hant#concept_384D169B0B724B799D573B8ECB5C39BF)時，資料來源清單頁面會在連續載入狀態中遭到封鎖的問題。(AAM-56410)
+* 修正在資料提供者未指派[組織 ID &#x200B;](https://experienceleague.adobe.com/docs/core-services/interface/manage-users-and-products/organizations.html?lang=zh-Hant#concept_384D169B0B724B799D573B8ECB5C39BF)時，資料來源清單頁面會在連續載入狀態中遭到封鎖的問題。(AAM-56410)
 * 對整個介面的協助工具有多處改良。(AAM-49077、AAM-49399、AAM-55991、AAM-55992)
 
 ### Audience Manager 文件更新 {#docs-aam}
