--- a/c-legacy-releases/2023/03082023.md
+++ b/c-legacy-releases/2023/03082023.md
@@ -23,7 +23,7 @@ ht-degree: 98%
 
 **需要協助嗎?**
 
-您的成功之道始於 [ Experience League](https://experienceleague.adobe.com/zh-hant#home)。 瀏覽我們龐大的自助[產品文件](https://experienceleague.adobe.com/docs/?lang=zh-Hant)和引導式[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html?lang=zh-Hant)。 尋找各種等級和角色的[課程](https://experienceleague.adobe.com/zh-hant#courses)，向我們同業的線上[社群](https://experienceleaguecommunities.adobe.com/?profile.language=en)提問，並在您需要時獲得專家[支援](https://experienceleague.adobe.com/zh-hant?support-tab=home#support)。
+您的成功之道始於 [&#x200B; Experience League](https://experienceleague.adobe.com/zh-hant#home)。 瀏覽我們龐大的自助[產品文件](https://experienceleague.adobe.com/docs/?lang=zh-Hant)和引導式[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html?lang=zh-Hant)。 尋找各種等級和角色的[課程](https://experienceleague.adobe.com/zh-hant#courses)，向我們同業的線上[社群](https://experienceleaguecommunities.adobe.com/?profile.language=en)提問，並在您需要時獲得專家[支援](https://experienceleague.adobe.com/zh-hant?support-tab=home#support)。
 
 ## 產品發行更新和活動
 
@@ -136,7 +136,7 @@ _在 3 月未更新。_
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2023 年 2 月 | [ [!DNL Microsoft Bing]  AEP 目的地中沒有客群規模](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21544.html?lang=zh-Hant) | 新文章 | 了解為什麼 [!DNL Bing] 對於傳送到 AEP [!DNL Bing] 目的地的 AEP 區段沒有顯示任何客群規模? |
+| 2023 年 2 月 | [&#x200B; [!DNL Microsoft Bing]  AEP 目的地中沒有客群規模](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21544.html?lang=zh-Hant) | 新文章 | 了解為什麼 [!DNL Bing] 對於傳送到 AEP [!DNL Bing] 目的地的 AEP 區段沒有顯示任何客群規模? |
 | 2023 年 2 月 | [RTCDP 授權附帶的環境 (開發、中繼、生產) 數量是多少？](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21590.html?lang=zh-Hant) | 新文章 | 了解 RTCDP 授權附帶的環境和沙箱的數量。 |
 | 2023 年 2 月 | [目標啟動上的&#x200B;_套用轉換_ 選項在雜湊之前是否標準化 (例如小寫)？](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21591.html?lang=zh-Hant) | 新文章 | 進一步了解一般資料標準化及其解決方法。 |
 
@@ -390,7 +390,7 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 
 >[!NOTE]
 >
->[!DNL Adobe Search&Promote] 服務終止時間為 **2022 年 9 月 1 日**。 對於產品和商業搜尋，[Live Search ](https://experienceleague.adobe.com/docs/commerce-merchant-services/live-search/overview.html?lang=zh-Hant)是 Adobe 的搜尋應用程式。如需了解詳細資訊，請參閱[產品壽命結束公告](https://experienceleague.adobe.com/docs/discontinued/using/search-promote.html?lang=zh-Hant)。
+>[!DNL Adobe Search&Promote] 服務終止時間為 **2022 年 9 月 1 日**。 對於產品和商業搜尋，[Live Search &#x200B;](https://experienceleague.adobe.com/docs/commerce-merchant-services/live-search/overview.html?lang=zh-Hant)是 Adobe 的搜尋應用程式。如需了解詳細資訊，請參閱[產品壽命結束公告](https://experienceleague.adobe.com/docs/discontinued/using/search-promote.html?lang=zh-Hant)。
 
 ### 適用於 [!DNL Adobe Commerce] 的新教學課程與文件 {#tutorials-commerce}
 
@@ -484,7 +484,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 3 月 | [設定訓練用沙箱](https://experienceleague.adobe.com/docs/journey-optimizer-learn/configure-a-training-sandbox/introduction-and-prerequisites.html?lang=zh-Hant) | 教學課程 | 了解如何設定用於訓練的沙箱。逐步說明設定結構描述、擷取範例資料和建立事件所需的步驟。 |
-| 2023 年 3 月 | [Journey Optimizer 挑戰](https://experienceleague.adobe.com/docs/journey-optimizer-learn/challenges/introduction-and-prerequisites.html?lang=zh-Hant) | 挑戰 | 挑戰提供了實施您所學知識所需的情境和要求。每個挑戰都說明了您實作的獨特使用案例。 <p>新挑戰：<ul><li>[建立夏季系列發佈](https://experienceleague.adobe.com/docs/journey-optimizer-learn/challenges/summer-collection-announcement-challenge.html?lang=zh-Hant)</li><li>[ 建立訂單確認](https://experienceleague.adobe.com/docs/journey-optimizer-learn/challenges/order-confirmation-challenge.html?lang=zh-Hant) </li></ul> |
+| 2023 年 3 月 | [Journey Optimizer 挑戰](https://experienceleague.adobe.com/docs/journey-optimizer-learn/challenges/introduction-and-prerequisites.html?lang=zh-Hant) | 挑戰 | 挑戰提供了實施您所學知識所需的情境和要求。每個挑戰都說明了您實作的獨特使用案例。 <p>新挑戰：<ul><li>[建立夏季系列發佈](https://experienceleague.adobe.com/docs/journey-optimizer-learn/challenges/summer-collection-announcement-challenge.html?lang=zh-Hant)</li><li>[&#x200B; 建立訂單確認](https://experienceleague.adobe.com/docs/journey-optimizer-learn/challenges/order-confirmation-challenge.html?lang=zh-Hant) </li></ul> |
 
 {style="table-layout:auto"}
 
@@ -583,8 +583,8 @@ New [!DNL Workfront] course and collections of tutorials on Experience League.
 +++詳細資料
 
 <!-- * [New features across [!DNL Advertising]](#advertising-all) -->
-* [ [!DNL Advertising DSP] 中的新功能](#advertising-dsp)
-* [ [!DNL Advertising Search] 中的新功能](#advertising-search)
+* [&#x200B; [!DNL Advertising DSP] 中的新功能](#advertising-dsp)
+* [&#x200B; [!DNL Advertising Search] 中的新功能](#advertising-search)
 <!-- * [New [!DNL Advertising] tutorials](#tutorials-advertising) -->
 
 <!--
