--- a/c-legacy-releases/2024/04172024.md
+++ b/c-legacy-releases/2024/04172024.md
@@ -429,7 +429,7 @@ _已知問題_
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|--------|---------|---------|
 | 2024 年 3 月 | [重新命名預設 `OOTB` 管理員群組並失去管理員權限](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23602) | 新文章 | 了解在重新命名預設 `OOTB` 管理員群組並失去管理員權限時，如何重新建立產品資料檔。 |
-| 2024 年 3 月 | [ [!DNL AEM] Cloud 上出現間歇性緩慢情形](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23840) | 新文章 | 了解處理 [!DNL Adobe Experience Manager as a Cloud Service] ([!DNL AEM] Cloud) 內啟動的建議方法 。 |
+| 2024 年 3 月 | [&#x200B; [!DNL AEM] Cloud 上出現間歇性緩慢情形](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23840) | 新文章 | 了解處理 [!DNL Adobe Experience Manager as a Cloud Service] ([!DNL AEM] Cloud) 內啟動的建議方法 。 |
 | 2024 年 3 月 | [[!UICONTROL CTT (內容傳輸工具)] 是否適用於雲端執行個體之間](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23865) | 新文章 | 本文旨在討論 [!UICONTROL CTT (內容傳輸工具)] 是否可移轉 [!DNL AEM as a Cloud Service] 中的雲端執行個體之間的現有內容。 |
 | 2024 年 3 月 | [內容作者無法在專案中選取「[!UICONTROL 翻譯設定]」](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23880) | 新文章 | 本文深入分析了內容作者面臨無法在 [!DNL AEM] 專案中選取「[!UICONTROL 雲端設定]」的問題。 |
 | 2024 年 3 月 | [[!DNL Adobe Experience Manager]：連結啟動頁面中的調整](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23939) | 新文章 | 了解當啟動頁面中的交叉連結應重寫為 `/content/launches` 下的路徑但未重寫時，[!DNL AEM] 如何調整啟動頁面中的連結。 |
@@ -444,10 +444,10 @@ _已知問題_
 | 2024 年 3 月 | [[!DNL Adobe Experience Manager]：如何解決在 [!DNL AEM] 雲端服務[!UICONTROL 前端管道]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23895)中的 `BUILD_NPM_AUDIT_ERROR` 問題 | 新文章 | 了解當前端管道的首次執行因內部錯誤而失敗時如何解決問題。 |
 | 2024 年 3 月 | [!UICONTROL IMS]  設定中的[`client_secret`正在取消設定](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23909) | 新文章 | 了解如何在某些 [!DNL Adobe Experience Manager] ([!DNL AEM]) 環境中解決問題，特別是從早期版本升級的環境中，管理員可能會遇到 [!UICONTROL IMS] 設定在 [!DNL AEM] 重新啟動後失敗的問題。  |
 | 2024 年 3 月 | [當具有 [!DNL ZIP] 壓縮格式的 [!DNL Tiff] 檔案上傳到 [!DNL AEM Assets]時，不會產生任何轉譯](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23916) | 新文章 | 了解如何將具備 [!DNL ZIP] 壓縮格式的 [!DNL Tiff] 檔案上傳至 [!DNL AEM Assets] 以及產生轉譯。 |
-| 2024 年 3 月 | [[!DNL AEM Dynamic Media] 影片觀看者分享嵌入連結，但卻見不到  [!DNL URL] ](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23941) | 新文章 | 本文提供了解決以下問題的方法： [!DNL Adobe Experience Manager] ([!DNL AEM Dynamic Media]) 影片觀看者分享嵌入連結，但卻見不到 [!DNL URL]。 |
+| 2024 年 3 月 | [[!DNL AEM Dynamic Media] 影片觀看者分享嵌入連結，但卻見不到  [!DNL URL] &#x200B;](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23941) | 新文章 | 本文提供了解決以下問題的方法： [!DNL Adobe Experience Manager] ([!DNL AEM Dynamic Media]) 影片觀看者分享嵌入連結，但卻見不到 [!DNL URL]。 |
 | 2024 年 3 月 | [預設 [!DNL GraphQL Query Executor] 設定選項](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23945) | 新文章 | 了解如何解決由最新 [!DNL GraphQL Java] 更新中預設解析器選項所引起在 [!DNL GraphQL] 查詢中的 [!DNL Denial of Service] 錯誤。   |
 | 2024 年 3 月 | [`javax.jcr.nodetype.ConstraintViolationException: OakConstraint0027` 錯誤出現 (當移轉  [!DNL AEM] 中使用者和群組時)](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23947) | 新文章 | 了解如何解決封包使用者和群組時的問題，確保避免封包 [!DNL out-of-the-box] 使用者，包括管理員和匿名使用者。 |
-| 2024 年 3 月 | [ [!DNL Live Copy] 推出的標籤繼承問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23961) | 新文章 | 了解如何解決透過 [!UICONTROL 網站上的] 頁面屬性 [!DNL Blueprint] 對話框新增標記時出現的問題，確保將它們推出到 [!DNL Live Copies] 透過新增 `tags` 到規則運算式來推出。 |
+| 2024 年 3 月 | [&#x200B; [!DNL Live Copy] 推出的標籤繼承問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23961) | 新文章 | 了解如何解決透過 [!UICONTROL 網站上的] 頁面屬性 [!DNL Blueprint] 對話框新增標記時出現的問題，確保將它們推出到 [!DNL Live Copies] 透過新增 `tags` 到規則運算式來推出。 |
 | 2024 年 3 月 | [建立新篩選器時無法在 [!UICONTROL Package Manager] 中檢視子目錄](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-23975) | 新文章 | 了解為需要建立含子目錄之套組的使用者解決方案。在 [!DNL Adobe Experience Manager] ([!DNL AEM]) 中，管理員在嘗試新增篩選器時遇到在 [!UICONTROL Package Manager UI]中看不見子目錄。 |
 
 {style="table-layout:auto"}
@@ -481,7 +481,7 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 
 +++詳細資料
 
-* 請參閱 [ [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
+* 請參閱 [&#x200B; [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
 * 請參閱「[Adobe Commerce 服務指南](https://experienceleague.adobe.com/zh-hant/docs/commerce-merchant-services/user-guides/home)」以查看 Commerce 服務發行資訊和文件。
 * 請參閱[產品可用性](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/product-availability)以存取個別的產品發行說明並確認可用性。
 
@@ -720,11 +720,11 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 ### [!DNL Advertising DSP] 中的新功能 {#advertising-dsp}
 
-查看 [ [!DNL Advertising DSP]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/dsp/home)
+查看 [&#x200B; [!DNL Advertising DSP]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/dsp/home)
 
 ### [!DNL Advertising Search, Social, & Commerce] 中的新功能 {#advertising-search}
 
-查看 [ [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
+查看 [&#x200B; [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
 
 +++
 
