--- a/c-legacy-releases/2024/10232024.md
+++ b/c-legacy-releases/2024/10232024.md
@@ -269,7 +269,7 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 
 * [最新版本概觀影片](https://experienceleague.adobe.com/zh-hant/docs/events/aemcs-release-update-recordings/2024/2024-7-0)
 * [[!DNL Experience Manager] 版本更新和藍圖](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-release-information/aem-release-updates/home)
-* [ [!DNL Experience Manager] as a Cloud Service 最新發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-cloud-service/content/release-notes/release-notes/release-notes-current)
+* [&#x200B; [!DNL Experience Manager] as a Cloud Service 最新發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-cloud-service/content/release-notes/release-notes/release-notes-current)
 * [[!DNL Experience Manager] 6.5 Service Pack 發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-65/content/release-notes/release-notes)
 * [[!DNL Experience Manager] Cloud Manager 發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-cloud-manager/content/release-notes/current)
 * [Automated Forms Conversion Service 發行說明](https://experienceleague.adobe.com/zh-hant/docs/aem-forms-automated-conversion-service/using/release-notes)
@@ -302,9 +302,9 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|--------|---------|---------|
 | 2024 年 9 月 | [[!DNL Dynamic Media Image]  上面會出現奇怪的網格](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25087) | 新文章 | 了解如何在使用 [!DNL Dynamic Media Scene7] 處理的影像中，識別並解決奇怪的網格覆蓋問題。 |
-| 2024 年 9 月 | [在  [!DNL Dynamic Media Classic] 中為[!UICONTROL 漸進式影片播放]產生  [!DNL URLs] ](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25003) | 新文章 | 了解如何從 [!DNL Dynamic Media Classic] 中的 [!UICONTROL Adaptive Video Set (AVS)] 建立可逐步播放視訊的 [!DNL URL]。 |
+| 2024 年 9 月 | [在  [!DNL Dynamic Media Classic] 中為[!UICONTROL 漸進式影片播放]產生  [!DNL URLs] &#x200B;](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25003) | 新文章 | 了解如何從 [!DNL Dynamic Media Classic] 中的 [!UICONTROL Adaptive Video Set (AVS)] 建立可逐步播放視訊的 [!DNL URL]。 |
 | 2024 年 9 月 | [[!DNL SAML SSO]  流程的 `saml_login POST` 請求出現 204 錯誤](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25006) | 新文章 | 了解如何解決內部部署 [!DNL Adobe Experience Manager (AEM)] 或者 [!DNL AMS AEM SAML SSO] 流程的 `saml_login POST` 請求出現 204 錯誤的問題。 |
-| 2024 年 10 月 |  [無法使用  [!DNL Federated ID] 存取  [!DNL AEM Assets Brand Portal] ](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25114) | 新文章 | 了解如何解決使用 [!DNL Federated ID] 存取 [!DNL AEM Assets Brand Portal] 的使用者在某些情況下可能無法存取解決方案的問題。 |
+| 2024 年 10 月 |  [無法使用  [!DNL Federated ID] 存取  [!DNL AEM Assets Brand Portal] &#x200B;](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25114) | 新文章 | 了解如何解決使用 [!DNL Federated ID] 存取 [!DNL AEM Assets Brand Portal] 的使用者在某些情況下可能無法存取解決方案的問題。 |
 | 2024 年 10 月 | [[!DNL PDF] 上傳失敗](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25116) | 新文章 | 了解如何解決將 [!DNL PDF] 上傳到 [!DNL Dynamic Media Classic] 或從 [!DNL AEM] 同步到 [!DNL DMS7] 時可能會失敗的問題。 |
 
 +++
@@ -315,7 +315,7 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 
 +++詳細資料
 
-* 請參閱 [ [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
+* 請參閱 [&#x200B; [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
 * 請參閱「[Adobe [!DNL Commerce] 服務指南](https://experienceleague.adobe.com/zh-hant/docs/commerce-merchant-services/user-guides/home)」，查看 Commerce 服務版本資訊和文件。
 * 請參閱[產品可用性](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/product-availability)以存取個別的產品發行說明並確認可用性。
 
@@ -628,11 +628,11 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 ### [!DNL Advertising DSP] 中的新功能 {#advertising-dsp}
 
-查看 [ [!DNL Advertising DSP]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/dsp/home)
+查看 [&#x200B; [!DNL Advertising DSP]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/dsp/home)
 
 ### [!DNL Advertising Search, Social, & Commerce] 中的新功能 {#advertising-search}
 
-查看 [ [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
+查看 [&#x200B; [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
 
 +++
 
