--- a/c-legacy-releases/2025/02122025.md
+++ b/c-legacy-releases/2025/02122025.md
@@ -159,7 +159,7 @@ ht-degree: 99%
 | 2025 年 1 月 | [[!DNL Adobe Experience Platform]：過時的範例設定檔](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25549) | 新文章 | 了解如何解決 [!DNL Adobe Experience Platform] 中的範例設定檔過時的問題，這可能會導致客群設定檔不準確。 |
 | 2025 年 1 月 |  [!DNL Adobe Experience Platform] 的[[!UICONTROL 啟動/資料收集]功能在 [!DNL Safari 17] 無痕模式](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25416)下未運作 | 新文章 | 了解如何解決在無痕模式下使用 [!DNL Safari 17] 時，因 [!DNL Adobe Experience Platform] 的[!UICONTROL 啟動/資料收集]功能無法啟動而妨礙 [!DNL Analytics] 資料擷取的問題。 |
 | 2025 年 1 月 |  [!DNL AEP][&#128279;](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25468)中的[!DNL Jupyter Notebooks] 環境存取問題 | 新文章 | 了解如何解決 Adobe Experience Platform 中的 [!DNL Jupyter Notebooks] 環境[!DNL Data Science Workspace]變得無法存取並顯示逾時錯誤的問題。 |
-| 2025 年 1 月 | [ [!DNL Adobe Launch ("Tags")] 版本在 [!DNL Adobe Experience Platform]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25531)中無法傳播的問題 | 新文章 | 了解如何解決 [!DNL Adobe Launch] (Experience Platform 標記) 版本無法正確傳播的問題，確保能有效地對所有網站訪客顯示更新內容。 |
+| 2025 年 1 月 | [&#x200B; [!DNL Adobe Launch ("Tags")] 版本在 [!DNL Adobe Experience Platform]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25531)中無法傳播的問題 | 新文章 | 了解如何解決 [!DNL Adobe Launch] (Experience Platform 標記) 版本無法正確傳播的問題，確保能有效地對所有網站訪客顯示更新內容。 |
 | 2025 年 1 月 | [了解  [!DNL Adobe Experience Platform]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25522) 中的  [!DNL GDPR]  隱私要求延遲 | 新文章 | 了解如何解決處理在 [!DNL Adobe Experience Platform] 內刪除行銷活動資料的 [!DNL GDPR] 隱私要求時的延遲問題。 |
 | 2025 年 1 月 | [[!DNL Adobe Experience Platform]：失敗的身分識別計數與目標啟用似乎不成比例](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25658) | 新文章 | 了解如何解決失敗的身分識別計數與目標啟用似乎不成比例的問題。 |
 
@@ -271,7 +271,7 @@ New tutorials published for Adobe [!DNL Analytics] on Experience League.
 
 * [最新版本概觀影片](https://experienceleague.adobe.com/zh-hant/docs/events/aemcs-release-update-recordings/overview)
 * [[!DNL Experience Manager] 版本更新和藍圖](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-release-information/aem-release-updates/home)
-* [ [!DNL Experience Manager] as a Cloud Service 最新發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-cloud-service/content/release-notes/release-notes/release-notes-current)
+* [&#x200B; [!DNL Experience Manager] as a Cloud Service 最新發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-cloud-service/content/release-notes/release-notes/release-notes-current)
 * [[!DNL Experience Manager] 6.5 Service Pack 發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-65/content/release-notes/release-notes)
 * [[!DNL Experience Manager] Cloud Manager 發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-cloud-manager/content/release-notes/current)
 * [Automated Forms Conversion Service 發行說明](https://experienceleague.adobe.com/zh-hant/docs/aem-forms-automated-conversion-service/using/release-notes)
@@ -300,7 +300,7 @@ New tutorials published for Adobe [!DNL Analytics] on Experience League.
 | 2025 年 1 月 | [語言搜尋篩選無法在  [!DNL Adobe Experience Manager as a Cloud Service (AEMaaCS)] 中正常運作](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25501) | 新文章 | 了解如何解決 [!DNL Adobe Experience Manager as a Cloud Service] 中的語言搜尋篩選器在嘗試依語言名稱搜尋資產時無法如預期運作的問題。 |
 | 2025 年 1 月 | [[!DNL Adobe Asset Link plug-in] 網路錯誤：*[!DNL server is unreachable]*](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25506) | 新文章 | 了解如何解決 [!DNL Adobe Photoshop] 中的 [!DNL Adobe Asset Link] 附加元件的連線問題。 |
 | 2025 年 1 月 | [解決  [!DNL InDesign] 中的  [!DNL Adobe Experience Manager (AEM)]  資產連結連線問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25562) | 新文章 | 了解如何解決使用 [!DNL InDesign] 中的 [!DNL Adobe Asset Link] (AAL) 時遇到的連線斷斷續續的問題。 |
-| 2025 年 1 月 | [  [!DNL Adobe Experience Manager as a Cloud Service (AEMaaCS)]中大型  [!DNL PDF] 的文字擷取限制](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25518) | 新文章 | 了解如何解決 [!DNL Adobe Experience Manager as a Cloud Service] 中大型 [!DNL PDF] 文件由於字元限制而文字擷取不完整的問題。 |
+| 2025 年 1 月 | [&#x200B;  [!DNL Adobe Experience Manager as a Cloud Service (AEMaaCS)]中大型  [!DNL PDF] 的文字擷取限制](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25518) | 新文章 | 了解如何解決 [!DNL Adobe Experience Manager as a Cloud Service] 中大型 [!DNL PDF] 文件由於字元限制而文字擷取不完整的問題。 |
 | 2025 年 1 月 | [讓使用者可冒充  [!DNL AEM as a Cloud Service]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25539) 中的其他使用者 | 新文章 | 了解 [!DNL AEM as a Cloud Service] 2024.10 版本中允許任何人冒充 [!DNL AEM Author] 中的使用者的新設定。 |
 | 2025 年 1 月 | [在  [!DNL AEMaaCS] 中編寫變更及複製內容時，自訂  [!DNL JCR]  屬性會遺失](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25541) | 新文章 | 了解如何解決在 [!DNL Adobe Experience Manager as a Cloud Service] (AEMaaCS) 中編寫變更及複製內容時，自訂 [!DNL JCR] 屬性會遺失的問題。 |
 | 2025 年 1 月 | [解決  [!DNL AEM as a Cloud Service - Assets] 中的資產處理問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25525) | 新文章 | 了解如何解決 [!DNL Adobe AEM's Dynamic Media] 模組中密碼同步問題所導致的資產處理問題。 |
@@ -314,7 +314,7 @@ New tutorials published for Adobe [!DNL Analytics] on Experience League.
 
 +++詳細資料
 
-* 請參閱 [ [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
+* 請參閱 [&#x200B; [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
 * 請參閱「[Adobe [!DNL Commerce] 服務指南](https://experienceleague.adobe.com/zh-hant/docs/commerce-merchant-services/user-guides/home)」，查看 Commerce 服務版本資訊和文件。
 * 請參閱[產品可用性](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/product-availability)以存取個別的產品發行說明並確認可用性。
 
@@ -405,10 +405,10 @@ Adobe Commerce 的新文章和現有文章的更新。
 | 2025 年 1 月 | [[!DNL IP Whitelisting] 在  [!DNL Adobe Campaign Standard] 中](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25610) | 新文章 | 了解如何將 [!DNL Adobe Campaign Standard] 中的 IP 位址列入白名單。 |
 | 2025 年 1 月 | [設定 [!DNL Adobe Campaign Classic V7] 以存取 [!DNL Google BigQuery]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25618) | 新文章 | 了解如何將 [!DNL Adobe Campaign Classic] (ACC) 與 [!DNL Google Cloud Platform (GCP) BigQuery] 整合。 |
 | 2025 年 1 月 | [追蹤  [!DNL Adobe Campaign Classic] 中的工作流程效能問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25628) | 新文章 | 了解如何在 [!DNL Adobe Campaign Classic] 中改善策略性執行個體的追蹤工作流程的處理時間。 |
-| 2025 年 1 月 | [ [!DNL Adobe Campaign Classic]中的結構描述儲存問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25604) | 新文章 | 了解如何解決 [!DNL Adobe Campaign Classic] 開發環境中的結構描述儲存問題。 |
+| 2025 年 1 月 | [&#x200B; [!DNL Adobe Campaign Classic]中的結構描述儲存問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25604) | 新文章 | 了解如何解決 [!DNL Adobe Campaign Classic] 開發環境中的結構描述儲存問題。 |
 | 2025 年 1 月 | [交付活動物件在  [!DNL Adobe Campaign Classic] 中開啟緩慢](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25451) | 新文章 | 了解如何解決在 [!DNL Adobe Campaign Classic] 中開啟交付活動物件時效能緩慢的問題。 |
 | 2025 年 1 月 | [解決 [!DNL Adobe Campaign]  報告中的 `No available deliveries`](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25538)  | 新文章 | 了解如何解決 [!DNL Adobe Campaign] 報告中 `No available deliveries` 警告的問題。 |
-| 2025 年 1 月 | [ [!DNL Adobe Campaign Standard] 中的塞爾維亞文 (西里爾文或拉丁文) 的預設語言代碼](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25598) | 新文章 | 了解 [!DNL Adobe Campaign Standard] 中塞爾維亞文的預設語言代碼。 |
+| 2025 年 1 月 | [&#x200B; [!DNL Adobe Campaign Standard] 中的塞爾維亞文 (西里爾文或拉丁文) 的預設語言代碼](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25598) | 新文章 | 了解 [!DNL Adobe Campaign Standard] 中塞爾維亞文的預設語言代碼。 |
 | 2025 年 1 月 | [解決  [!DNL Adobe Campaign Managed Cloud] 中的目標對應選擇錯誤](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25592) | 新文章 | 了解如何解決在 [!DNL Adobe Campaign Managed Cloud] 中發生目標對應選擇錯誤時的問題。 |
 
 +++
@@ -595,13 +595,13 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 最新版本：2025 年 2 月 3 日
 
-查看 [ [!DNL Advertising DSP]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/dsp/home)
+查看 [&#x200B; [!DNL Advertising DSP]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/dsp/home)
 
 ### [!DNL Advertising Search, Social, & Commerce] 中的新功能 {#advertising-search}
 
 2024 年 12 月 5 日
 
-查看 [ [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
+查看 [&#x200B; [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
 
 +++
 
