--- a/c-legacy-releases/2025/05142025.md
+++ b/c-legacy-releases/2025/05142025.md
@@ -231,7 +231,7 @@ New or updated video tutorials published for Adobe Analytics.
 
 所有 [!DNL Experience Manager] 的發行說明都會保留在以下頁面：
 
-* [ [!DNL Experience Manager] as a Cloud Service 最新發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-cloud-service/content/release-notes/release-notes/release-notes-current)
+* [&#x200B; [!DNL Experience Manager] as a Cloud Service 最新發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-cloud-service/content/release-notes/release-notes/release-notes-current)
 * [最新版本概觀影片](https://experienceleague.adobe.com/zh-hant/docs/events/aemcs-release-update-recordings/overview)
 * [[!DNL Experience Manager] 版本更新和藍圖](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-release-information/aem-release-updates/home)
 * [[!DNL Experience Manager] 6.5 Service Pack 發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-65/content/release-notes/release-notes)
@@ -268,7 +268,7 @@ New or updated video tutorials published for Adobe Analytics.
 | 2025 年 4 月 | [修正 Adobe Experience Manager 的內容樹排序](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26241) | 新文章 | 了解如何解決 Adobe Experience Manager (AEM) 目錄中資料夾數量超過 1,000 個，導致排序行為出現異常的問題。 |
 | 2025 年 4 月 | [解決在 AEM 中使用  [!DNL Dynamic Media]  造成的影片檔案音訊問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26197) | 新文章 | 了解如何解決在 Adobe Experience Manager as a Cloud Service (AEMaaCS) 中使用 [!DNL Dynamic Media] 時造成的影片檔案音訊同步問題。 |
 | 2025 年 4 月 | [解決 AEM as a Cloud Service 中的無效使用者模擬錯誤](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26118) | 新文章 | 了解如何解決在 [!DNL Adobe Experience Manager as a Cloud Service - Sites] 中模擬失敗後出現「*無效使用者*」錯誤的問題。 |
-| 2025 年 4 月 | [在 Adobe Experience Manager (AEM) 中無法設定  [!DNL Microsoft Translation Service] ](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26096) | 新文章 | 了解如何解決在 Adobe Experience Manager (AEM) as a Cloud Service 中設定 [!DNL Microsoft Translation Service] 時，[!DNL AEM Translation] 設定表單無法辨識 [!DNL Microsoft Azure] 所提供的端點和金鑰的問題。 |
+| 2025 年 4 月 | [在 Adobe Experience Manager (AEM) 中無法設定  [!DNL Microsoft Translation Service] &#x200B;](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26096) | 新文章 | 了解如何解決在 Adobe Experience Manager (AEM) as a Cloud Service 中設定 [!DNL Microsoft Translation Service] 時，[!DNL AEM Translation] 設定表單無法辨識 [!DNL Microsoft Azure] 所提供的端點和金鑰的問題。 |
 | 2025 年 4 月 | [監視 AEM 環境健康狀態](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25893) | 新文章 | 了解如何使用內建的健康檢查端點，透過程式化方式監視 AEM 環境的健康狀態。 |
 | 2025 年 4 月 | [解決內容片段匯出至 Adobe Target 的問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26167) | 新文章 | 了解如何解決從 Adobe Experience Manager 匯出內容片段至 Adobe Target 時，出現「*與 Adobe Target 同步失敗*」錯誤的問題。 |
 | 2025 年 4 月 | [解決因  [!DNL Time-to-Live]  (TTL) 快取而造成的 AEM 發布伺服器高負載問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26393) | 新文章 | 了解如何解決 [!DNL AEMaaCS - Sites] 中 AEM 發布伺服器因 5 分鐘 TTL 快取策略導致效能激增的問題。 |
@@ -284,7 +284,7 @@ New or updated video tutorials published for Adobe Analytics.
 
 +++發行說明、新的教學課程，以及支援文章
 
-* 請參閱 [ [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
+* 請參閱 [&#x200B; [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
 * 請參閱「[Adobe [!DNL Commerce] 服務指南](https://experienceleague.adobe.com/zh-hant/docs/commerce/user-guides/home)」，查看 Commerce 服務版本資訊和文件。
 * 請參閱[產品可用性](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/product-availability)以存取個別的產品發行說明並確認可用性。
 
@@ -597,13 +597,13 @@ New tutorials published for Adobe Marketo.
 
 2025 年 5 月 7 日
 
-查看 [ [!DNL Advertising DSP]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/dsp/home)
+查看 [&#x200B; [!DNL Advertising DSP]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/dsp/home)
 
 ### [!DNL Advertising Search, Social, & Commerce] 中的新功能 {#advertising-search}
 
 2024 年 3 月 26 日
 
-查看 [ [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
+查看 [&#x200B; [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
 
 +++
 
