--- a/c-legacy-releases/2024/01112024.md
+++ b/c-legacy-releases/2024/01112024.md
@@ -462,7 +462,7 @@ _已知問題_
 |---------|--------|---------|---------|
 | 2023 年 12 月  | [Cloud Manager Assets 效能測試失敗](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23312.html?lang=zh-Hant) | 新文章 | 了解資產效能測試失敗並出現未知錯誤的解決方案。 |
 | 2023 年 12 月  | [編輯內容時出現效能問題](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23222.html?lang=zh-Hant) | 新文章 | 了解在瀏覽器開發人員控制台中編輯內容時疑難排解和解決效能問題。 |
-| 2023 年 12 月  | [ [!DNL AEMaaCS] 上缺少 [!UICONTROL 索引管理器] ](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23195.html?lang=zh-Hant) | 新文章 | 了解 [!DNL AEMaaCS] 中的[!UICONTROL 索引管理器]為什麼不支援檢查索引的大小或狀態，例如 [!DNL AEM Managed Services] 和 [!DNL AEM] 內部部署。 |
+| 2023 年 12 月  | [&#x200B; [!DNL AEMaaCS] 上缺少 [!UICONTROL 索引管理器] &#x200B;](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23195.html?lang=zh-Hant) | 新文章 | 了解 [!DNL AEMaaCS] 中的[!UICONTROL 索引管理器]為什麼不支援檢查索引的大小或狀態，例如 [!DNL AEM Managed Services] 和 [!DNL AEM] 內部部署。 |
 | 2023 年 12 月  | [由於授權，遠端  [!DNL DAM]  上的影像未顯示](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23185.html?lang=zh-Hant) | 新文章 | 了解如何透過授予[!UICONTROL 已連線資產]必要的權限，在遠端 [!DNL DAM (Digital Asset Management)] 上新增影像。 |
 | 2023 年 12 月  | [[!UICONTROL 由於] 不可用錯誤，管道建置 [!DNL Python] 失敗](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23141.html?lang=zh-Hant) | 新文章 | 透過建立使用 exec 外掛程式安裝 [!DNL Python 3] 的 [!DNL Maven] 專案，了解修正因 [!DNL Python] 錯誤而導致的[!UICONTROL 管道建置]失敗的解決方案。 |
 | 2023 年 12 月  | [取得  [!DNL AEM]  版本  [!DNL Oak-run]  工具的步驟](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23130.html?lang=zh-Hant) | 新文章 | 了解如何根據 [!DNL Oak-run] 版本取得 [!DNL AEM] 工具。 |
@@ -505,13 +505,13 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 
 +++詳細資料
 
-* 請參閱 [ [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/docs/commerce-operations/release/notes/overview.html?lang=zh-Hant)以取得最新資訊。
+* 請參閱 [&#x200B; [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/docs/commerce-operations/release/notes/overview.html?lang=zh-Hant)以取得最新資訊。
 * 請參閱「[Adobe Commerce 服務指南](https://experienceleague.adobe.com/docs/commerce-merchant-services/user-guides/home.html?lang=zh-Hant)」以查看 Commerce 服務發行資訊和文件。
 * 請參閱[產品可用性](https://experienceleague.adobe.com/docs/commerce-operations/release/product-availability.html?lang=zh-Hant)以存取個別的產品發行說明並確認可用性。
 
 >[!NOTE]
 >
->[!DNL Adobe Search&Promote] 服務終止時間為 **2022 年 9 月 1 日**。 對於產品和商業搜尋，[Live Search ](https://experienceleague.adobe.com/docs/commerce-merchant-services/live-search/overview.html?lang=zh-Hant)是 Adobe 的搜尋應用程式。如需了解詳細資訊，請參閱[產品壽命結束公告](https://experienceleague.adobe.com/docs/discontinued/using/search-promote.html?lang=zh-Hant)。
+>[!DNL Adobe Search&Promote] 服務終止時間為 **2022 年 9 月 1 日**。 對於產品和商業搜尋，[Live Search &#x200B;](https://experienceleague.adobe.com/docs/commerce-merchant-services/live-search/overview.html?lang=zh-Hant)是 Adobe 的搜尋應用程式。如需了解詳細資訊，請參閱[產品壽命結束公告](https://experienceleague.adobe.com/docs/discontinued/using/search-promote.html?lang=zh-Hant)。
 
 ### 全新的 [!DNL Adobe Commerce] 教學課程 {#tutorials-commerce}
 
@@ -580,13 +580,13 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|----|----|-----------|
-| 2023 年 12 月  | [ [!DNL overflow-y: hidden] 屬性自動到登陸頁面](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23345.html?lang=zh-Hant) | 新文章 | 了解在 Adobe Campaign Classic v7 中，如果您無法再捲動已發佈的登陸頁面，請手動從登陸頁面定義中移除 `overflow-y: hidden`。 |
-| 2023 年 12 月  | [要求標頭未轉寄到 ACC 中的  [!DNL JSSP] ](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23342.html?lang=zh-Hant) | 新文章 | 了解您何時發送要求標頭，如果它們傳回空白，則表示它們未轉寄到 [!DNL JSSP]。 |
+| 2023 年 12 月  | [&#x200B; [!DNL overflow-y: hidden] 屬性自動到登陸頁面](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23345.html?lang=zh-Hant) | 新文章 | 了解在 Adobe Campaign Classic v7 中，如果您無法再捲動已發佈的登陸頁面，請手動從登陸頁面定義中移除 `overflow-y: hidden`。 |
+| 2023 年 12 月  | [要求標頭未轉寄到 ACC 中的  [!DNL JSSP] &#x200B;](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23342.html?lang=zh-Hant) | 新文章 | 了解您何時發送要求標頭，如果它們傳回空白，則表示它們未轉寄到 [!DNL JSSP]。 |
 | 2023 年 12 月  | [在公共資源下上傳檔案卡住)](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23329.html?lang=zh-Hant) | 新文章 | 了解在 Adobe Campaign Classic v7 中的行銷和中間執行個體基礎結構中，透過公共資源上傳檔案在 90% 時卡住的解決方案。 |
 | 2023 年 12 月  | [ORA-01805：日期/時間作業可能發生錯誤](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23316.html?lang=zh-Hant) | 新文章 | 了解修正 Adobe Campaign 錯誤的步驟：`ORA-01805: possible error in date/time operation.` |
-| 2023 年 12 月  | [ [!DNL ffdaUnicity] 工作流程失敗，並出現  [!DNL ODB-240000]  錯誤](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23307.html?lang=zh-Hant) | 新文章 | 了解 [!DNL ffdaUnicity] 工作流程失敗並出現 [!DNL ODB-240000] 錯誤的解決方案。 |
+| 2023 年 12 月  | [&#x200B; [!DNL ffdaUnicity] 工作流程失敗，並出現  [!DNL ODB-240000]  錯誤](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23307.html?lang=zh-Hant) | 新文章 | 了解 [!DNL ffdaUnicity] 工作流程失敗並出現 [!DNL ODB-240000] 錯誤的解決方案。 |
 | 2023 年 12 月  | [Campaign： [!DNL PGS-220000] 錯誤：運算子不存在：字元變化 = 整數](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23137.html?lang=zh-Hant) | 新文章 | 了解在執行包含警報活動的工作流程時出現 [!DNL PGS-220000 Error] `PostgreSQL: ERROR: operator does not exist: character varying = integer` 錯誤的 [!DNL Campaign Classic v7] 問題的解決方案。 |
-| 2023 年 12 月  | [控制面板未顯示所有非開箱即用的表格和正在執行的工作流程) ](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23124.html?lang=zh-Hant) | 新文章 | 了解為什麼 Campaign 控制面板不顯示所有非開箱即用表格和正在執行的工作流程。 |
+| 2023 年 12 月  | [控制面板未顯示所有非開箱即用的表格和正在執行的工作流程) &#x200B;](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23124.html?lang=zh-Hant) | 新文章 | 了解為什麼 Campaign 控制面板不顯示所有非開箱即用表格和正在執行的工作流程。 |
 | 2023 年 12 月  | [將  [!DNL Adobe Campaign Classic]  從  [!DNL Linux]  7.9 遷移到 8.8：綜合指南](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23123.html?lang=zh-Hant) | 新文章 | 按照此全面的分步指南，了解如何將現有 [!DNL Adobe Campaign Classic] 執行個體從 [!DNL Linux®] 7.9 遷移到 [!DNL Linux®] 8.8。 |
 | 2023 年 12 月  | [行動裝置未&#x200B;*[!UICONTROL 收到 `nmsBroadLogRcp` 中的  [!DNL SMS]  傳遞狀態]*](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23023.html?lang=zh-Hant) | 新文章 | 了解如何解決`nmsBroadLogRcp` 中 [!DNL SMS] 傳遞狀態不正確的問題。 |
 | 2023 年 12 月  | [收件匣呈現功能/按鈕在傳遞表單中不可用](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22932.html?lang=zh-Hant) | 新文章 | 了解交付表單中收件匣呈現功能/按鈕不可用時的解決方法。 |
@@ -619,7 +619,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|----|----|-----------|
-| 2023 年 12 月  | [ [!DNL AJO]  電子郵件追蹤資料中的點擊量不準確](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23027.html?lang=zh-Hant) | 新文章 | 了解電子郵件追蹤資料出現差異的可能原因之一。 |
+| 2023 年 12 月  | [&#x200B; [!DNL AJO]  電子郵件追蹤資料中的點擊量不準確](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23027.html?lang=zh-Hant) | 新文章 | 了解電子郵件追蹤資料出現差異的可能原因之一。 |
 | 2023 年 12 月  | [區段未評估輪廓，但  [!DNL Journey]  仍然發送了電子郵件](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22975.html?lang=zh-Hant) | 新文章 | 了解即使 [!DNL Segment] 尚未評估任何輪廓，[!DNL Journey] 是否也會發送電子郵件。 |
 | 2023 年 12 月  | [[!DNL AJO] - `now()` 時間戳記在毫秒中加入額外的數字](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22978.html?lang=zh-Hant) | 新文章 | 了解當 `now()` 時間戳在毫秒中添加額外數字時如何解決匯入檔案的問題。 |
 
@@ -735,11 +735,11 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 ### [!DNL Advertising DSP] 中的新功能 {#advertising-dsp}
 
-查看 [ [!DNL Advertising DSP] 中的新增功能](https://experienceleague.adobe.com/docs/advertising/dsp/home.html?lang=zh-Hant)
+查看 [&#x200B; [!DNL Advertising DSP] 中的新增功能](https://experienceleague.adobe.com/docs/advertising/dsp/home.html?lang=zh-Hant)
 
 ### [!DNL Advertising Search, Social, & Commerce] 中的新功能 {#advertising-search}
 
-查看 [ [!DNL Advertising Search, Social, & Commerce] 中的新增功能](https://experienceleague.adobe.com/docs/advertising/search-social-commerce/home.html?lang=zh-Hant)
+查看 [&#x200B; [!DNL Advertising Search, Social, & Commerce] 中的新增功能](https://experienceleague.adobe.com/docs/advertising/search-social-commerce/home.html?lang=zh-Hant)
 
 +++
 
